--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
+  "type": "module",
   "devDependencies": {
-    "autoprefixer": "^10.4.18",
-    "laravel-mix": "^6.0.49",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1"
+    "@tailwindcss/vite": "^4.0.0",
+    "tailwindcss": "^4.0.0",
+    "vite": "^6.0.0"
   },
-  "dependencies": {
-    "webpack": "^5.90.3"
+  "scripts": {
+    "build": "vite build",
+    "dev": "vite",
+    "watch": "vite build --watch"
   }
 }
