--- a/composer.json
+++ b/composer.json
@@ -35,9 +35,7 @@
         "phpstan/extension-installer": "^1.1",
         "phpstan/phpstan-deprecation-rules": "^1.0|^2.0",
         "phpstan/phpstan-phpunit": "^1.0|^2.0",
-        "phpunit/phpunit": "^10.4|^11.5.3",
-        "spatie/laravel-ray": "^1.28",
-        "spatie/x-ray": "^1.1"
+        "phpunit/phpunit": "^10.4|^11.5.3"
     },
     "autoload": {
         "psr-4": {
